# releng-lftools

./: .coafile  .editorconfig  .flake8  .gitignore  .gitlint  .gitreview  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  MANIFEST.in  README.md  deploy.py  docs-requirements.txt  fix_yamllint.sh  groups  lftools  load_logger_ini.py  mypy.ini  notes  project.config  pyproject.toml  reno.yaml  requirements-docs.txt  requirements-openstack.txt  requirements-test.txt  requirements.txt  run_shellcheck  setup.cfg  setup.py  tox.ini  version
.github/workflows/: gerrit-verify.yaml  release-drafter.yaml  release.yaml
contrib/: setup_lftools.sh
docs/: best-practices.rst  conf.py  conf.yaml  index.rst  installation.rst  shell.rst  tips.rst
docs/commands/: config.rst  dco.rst  deploy.rst  gerrit.rst  github.rst  index.rst  infofile.rst  jira.rst  ldap.rst  lfidapi.rst  license.rst  nexus.rst  nexus2.rst  nexus3.rst  openstack.rst  packagecloud.rst  readthedocs.rst  rtd.rst  schema.rst  sign.rst  version.rst
docs/jenkins/: index.rst  plugins.rst
etc/: logging.ini
etc/github/: admin-config.example.yaml  branch-protection.example.yaml  repo-config.example.yaml  settings.example.yaml  webhook.example.yaml
etc/ldap/: .gitignore  config-ldap.example.yaml  settings-ldap.example.yaml
etc/nexus/: settings.example.yaml
lftools/: NexusAndDockerImages.py  __init__.py  cli.py  config.py  conftest.py  deploy.py  ess3.py  gerrit_helper.py  github_helper.py  githubhelper.py  githubvotes.py  helpers.py  ldap_cli.py  lfidapi.py  license.py  oauth2_helper.py  onap_nexus_2_docker.py  schema.py
lftools/api/: __init__.py  client.py  exceptions.py
lftools/apis/: client.py
lftools/automerge/: merge_changes.py
lftools/cli/: __init__.py  config.py  correctinfofile.py  dco.py  deploy.py  gerrit.py  github.py  github_cli.py  infofile.py  jira.py  ldap_cli.py  lfidapi.py  license.py  nexus.py  nexus3.py  nexus33.py  no_cmd.py  packagecloud.py  parseinfofile.py  rtd.py  schema.py  sign.py  utils.py  version.py
lftools/git/: __init__.py  gerrit.py
lftools/github/: __init__.py  cmd.py
lftools/jenkins/: __init__.py  add_config_groovy  crete-settings-file.groovy  delete-server-id.yaml  sync_config_files.groovy  token.py
lftools/ldap/: __init__.py  cmd.py  groups.py  lfldap.py  odlldap.py
lftools/nexus/: __init__.py  cmd.py  release_docker_hub.py  util.py
lftools/openstack/: __init__.py  cluster.py  cmd.py  image.py  no_cmd.py  object.py  server.py  stack.py  volume.py
lftools/shell/: __init__.py  dco.py
lftools/utils/: github.py
project_builder/: config-ldap.example.yaml  config.example.yaml  ldap_create_project.py  reorder_staging_repo.py  repo_build.py  requirements.txt  settings-ldap.example.yaml  settings.example.yaml
project_builder/nexus/: __init__.py
releasenotes/notes/: Add-packagecloud-lftools-ea77c9b971a5cf7e.yaml  AddXtraOutputForNexusRelease-c92f45be77a109ed.yaml  Fix-copy_archives-error-when-archive-is-file-14e7a4e12775b887.yaml  ForceLowerCase2Gerrit-65aa081f8bd634de.yaml  Handle-image-ownership-in-cleanup-e598855680b02a50.yaml  Migrate-away-from-depreciated-shade-library-516eaec59f1922dd.yaml  Modified-printouts-when-release-staging-repos-0b58c28e54ef6958.yaml  Move-to-v2-on-dockerhub-tag-api-62834fe85a7808f8.yaml  ReleaseDockerHub-RepoInputFile-1027258b656a98e8.yaml  add-create_roles-function-d0cd9c31fe34a73f.yaml  add-files-to-compress-dcba892e04a7672a.yaml  add-force-option-stack-delete-35463a7b8a0920eb.yaml  add-get-secrets-402d7e2452994baa.yaml  add-get-ssh-private-keys-33e8e5e7f40a7afd.yaml  add-missing-munch-dep-ebbd7d3f34d12d09.yaml  add-openstack-cluster-ac419d783732.yaml  add-openstack-cost-464444d8cf0bdfa5.yaml  add-option-for-serial-e5342f8365a92120.yaml  add-protect-command-to-openstack-image-63ce4cdff64b5c4a.yaml  add-s3-to-log-shipping-1fad234f538c13f4.yaml  add-upload-size-deploy-nexus-4206aae1e82839a7.yaml  add_util_passgen-1c2b08bbf4771c12.yaml  bump-action-versions-985b1d2d32900220.yaml  bump-openstack-sdk-a35995f98d086a46.yaml  change-default-node-for-onap-new-repos-3daabfaaf7c15a63.yaml  copy_archive_with_pattern_causes_OSError-c194d1960d322c51.yaml  credential-input-73245c664c98cdc1.yaml  dco-check-2ef51234a4ee7d80.yaml  dco-signoffs-feature-e0f65249153942fb.yaml  debug-e80d591d478e69cc.yaml  deploy-nexus-use-put-09e52050a869ac2d.yaml  deploy_nexus-4feb8fc7e24daaf0.yaml  deploy_nexus-6e26fda6a3b0c5b1.yaml  deploy_nexus_stage-e5f6f3e068f88ca4.yaml  docs-cad1f396741b9526.yaml  fix-archive-symlink-loops-0e754059d8db33ba.yaml  fix-copy-archives-8cb39578a0367e5e.yaml  fix-deploy-archives-826d9360f271ca59.yaml  fix-deploy-mimetype-889dd0182fea051b.yaml  (+116 more)
relnotes/: v0.10.0.txt  v0.11.0.txt  v0.12.0.txt  v0.13.0.txt  v0.14.0.txt  v0.15.0.txt  v0.2.0.txt  v0.3.0.txt  v0.4.0.txt  v0.5.0.txt  v0.6.0.txt  v0.7.0.txt  v0.8.0.txt  v0.9.0.txt
scripts/: fix_yamllint.sh
shell/: Build_INFO_committers.sh  Check_committers  Check_committers.sh  GrouplookupUser  INFO.template.yaml  ReleaseToDockerHub  autocorrectinfofile  check_if_mirrored_to_github  check_projects_for_groups_and_info_files  dco  deploy  deploy-archives  deploy.py  fix_yamllint  fix_yamllint.sh  fixinfofile  gerrit_create  get_guthub_token  grant_gh_replication_readonrepo.sh  inactivecommitters  lfidapi_add_remove_users  org_github_create_repo  org_github_create_repos  patch-odl-release  rename.sh  sign  verifyinfofile  version  yaml4info
tests/: test_api_client.py  test_deploy.py  test_git.py  test_github.py  test_license.py  test_nexus.py  test_onap_nexus_2_docker.py  test_openstack_cluster.py  test_release_docker_hub.py  test_release_staging_repo.py  test_rtd.py  test_schema.py  test_version.py
(+120 files in other folders)
