[metadata]
name = lftools
author = LF Releng
author-email = releng@linuxfoundation.org
summary = Linux Foundation Release Engineering Tools
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://docs.releng.linuxfoundation.org/projects/lftools
project_urls =
    Bug Tracker = https://jira.linuxfoundation.org
    Documentation = https://docs.releng.linuxfoundation.org/projects/lftools
    Source Code = https://github.com/lfit/releng-lftools
license = EPL-1.0
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Eclipse Public License 1.0 (EPL-1.0)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[extras]
openstack =
    shade~=1.27.1

[files]
packages = lftools
data_files =
    etc =
        etc/logging.ini
scripts =
    shell/dco
    shell/deploy
    shell/sign
    shell/version

[entry_points]
console_scripts =
    lftools = lftools.cli:main
